kubernetes/kong/ingress-relationship-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relationship-service-ingress
  namespace: tomodachi-app
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "false"
    konghq.com/protocols: "http,https"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/relationships/friends/request
            pathType: Prefix
            backend:
              service:
                name: relationship-service
                port:
                  number: 8080
